Agrego informacion de acerca de

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="header">
     <ul class="nav nav-pills pull-right">
       <li class="active"><a href="#">Inicio</a></li>
-      <li><a href="#">Acerca de</a></li>
+      <li><a href="/acercade.html">Acerca de</a></li>
       <li><a href="#">Contacto</a></li>
     </ul>
     <h3 class="text-muted">PereiraJS</h3>
