reviso acercade y tildes. (ok).

--- a/acercade.html
+++ b/acercade.html
@@ -29,7 +29,7 @@
     <div class="starter-template">
       <h1>¿Qué es PereiraJS?</h1>
       <p class="lead">
-        PereiraJS es una comunidad de personas cuyo interes principal es conocer, estudiar, explorar, aprender, experimentar y difundir la tecnología para la construcción de sitios Web, conocida como <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">JavaScript</a>.
+        PereiraJS es una comunidad de personas cuyo interés principal es conocer, estudiar, explorar, aprender, experimentar y difundir la tecnología para la construcción de sitios Web, conocida como <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">JavaScript</a>.
       </p>
       <p class="lead">
         Los miembros de PereiraJS procurarán compartir y difundir cualquier conocimiento al rededor de JavaScript y demás tecnologías de la Web.
