--- a/acercade.html
+++ b/acercade.html
@@ -21,7 +21,7 @@
     <ul class="nav nav-pills pull-right">
       <li><a href="/">Inicio</a></li>
       <li class="active"><a href="/acercade.html">Acerca de</a></li>
-      <li><a href="#">Contacto</a></li>
+      <li><a href="/contacto.html">Contacto</a></li>
     </ul>
     <h3 class="text-muted">PereiraJS</h3>
   </div>
