Aqui corrigiendo mi dislexia

--- a/contacto.html
+++ b/contacto.html
@@ -30,17 +30,19 @@
     <address>
       <strong>PereiraJS</strong><br>
       <a href="mailto:info@pereirajs.org">info@pereirajs.org</a><br>
-      <a href="http://www.pereriajs.org">www.pereirajs.org</a>
+      <a href="http://www.pereirajs.org">www.pereirajs.org</a>
     </address>
   </h2>
   <h3>Medios Sociales de Contacto</h3>
   <h3>
+    <a href="http://twitter.com/pereirajs_" target="_blank">
     <img src="/Twitter_logo_blue.png" alt="Twitter @pereirajs_" class="img-rounded">
-    <a href="http://twitter.com/pereirajs_" target="_blank">@pereirajs_</a>
+    @pereirajs_</a>
   </h3>
   <h3>
+    <a href="http://github.com/pereirajs" target="_blank">
     <img src="/Octocat.png" alt="Github pereirajs" class="img-rounded">
-    <a href="http://github.com/pereirajs" target="_blank">github.com/pereirajs</a>
+    github.com/pereirajs</a>
   </h3>
 
   <div class="footer">
