--- a/contacto.html
+++ b/contacto.html
@@ -19,7 +19,7 @@
 <div class="container">
   <div class="header">
     <ul class="nav nav-pills pull-right">
-      <li><a href="#">Inicio</a></li>
+      <li><a href="/">Inicio</a></li>
       <li><a href="/acercade.html">Acerca de</a></li>
       <li class="active"><a href="/contacto.html">Contacto</a></li>
     </ul>
