--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <p>Sigue a nuestros colaboradores en twitter para más información.</p>
     <a href="https://twitter.com/pereirajs_" class="twitter-follow-button" data-show-count="false"
 data-lang="es" data-size="large">Seguir a @pereirajs_</a>
-<script>!function(d,s,id){var 
-js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 
+<script>!function(d,s,id){var
+js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
 'script', 'twitter-wjs');</script>
   </div>
 
@@ -43,19 +43,19 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
     <div class="row">
       <div class="col-xs-4"><a href="https://twitter.com/cronopio2" class="twitter-follow-button"
 data-show-count="false" data-lang="es" data-size="large">Seguir a @cronopio2</a>
-<script>!function(d,s,id){var 
-js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 
+<script>!function(d,s,id){var
+js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
 'script', 'twitter-wjs');</script>
       </div>
       <div class="col-xs-4"><a href="https://twitter.com/pin3da_" class="twitter-follow-button"
 data-show-count="false" data-lang="es" data-size="large">Seguir a @pin3da_</a>
-<script>!function(d,s,id){var 
+<script>!function(d,s,id){var
 js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.cr$
 'script', 'twitter-wjs');</script>
       </div>
       <div class="col-xs-4"><a href="https://twitter.com/jh0nb3r" class="twitter-follow-button"
 data-show-count="false" data-lang="es" data-size="large">Seguir a @jh0nb3r</a>
-<script>!function(d,s,id){var 
+<script>!function(d,s,id){var
 js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.cr$
 'script', 'twitter-wjs');</script>
       </div>
@@ -65,7 +65,7 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
       <div class="col-xs-12 bg-info">
         <h2 class="text-center">¿Te gustaría dar una charla en el grupo?</h2>
         <h3 class="text-center">Con gusto recibimos tu propuesta y la publicaremos en la página.</h3>
-        <p class="lead">Por favor envianos un correo a <a href="mailto:info@pereirajs.org">info@pereirajs.org</a> con un título y una descripción lo más detallada posible de como sería la charla, que temas cubriría y que elementos (Internet, Video Beam, Computador, Sonido, etc) serían necesarios. Te contactaremos lo más pronto posible.</p>
+        <p class="lead">Por favor envíanos un correo a <a href="mailto:info@pereirajs.org">info@pereirajs.org</a> con un título y una descripción lo más detallada posible de como sería la charla, qué temas cubriría y qué elementos (Internet, Video Beam, Computador, Sonido, etc) serían necesarios. Te contactaremos lo más pronto posible.</p>
       </div>
     </div>
   </div>
