agrego info de la primer reunion y agrego parque periera como aliado estrategico

--- a/index.html
+++ b/index.html
@@ -26,22 +26,49 @@
     <h3 class="text-muted">PereiraJS</h3>
   </div>
 
-  <div class="jumbotron">
-    <h1>PereiraJS</h1>
-    <img src="/jsconf.co.jpg" />
-    <h2>Próximamente...</h2>
-    <p class="text-info">Posible primera reunión en Febrero del 2014.</p>
-    <p>Sigue a nuestros colaboradores en twitter para más información.</p>
-    <a href="https://twitter.com/pereirajs_" class="twitter-follow-button" data-show-count="false"
-data-lang="es" data-size="large">Seguir a @pereirajs_</a>
-<script>!function(d,s,id){var
-js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
-'script', 'twitter-wjs');</script>
+  <div class="jumbotron" style="background-color:#dff0d8;">
+    <h2>Primera Reunión PereiraJS</h2>
+    <p>Fecha: <strong>27 de Febrero del 2014</strong></p>
+    <p>Lugar: <strong>ViveLab Pereira</strong></p>
+    <h3 class="text-info">Reserva tu lugar ya mismo.</h3>
+    <button>reservar!</button>
   </div>
 
   <div class="container">
     <div class="row">
-      <div class="col-xs-4"><a href="https://twitter.com/cronopio2" class="twitter-follow-button"
+      <div class="col-xs-4">
+        <img src="/logo-parque.png" alt="Logo Parquesoft Periera" class="img-thumbnail"><br><br>
+        <a href="https://twitter.com/ParquePereira" class="twitter-follow-button"
+data-show-count="false" data-lang="es" data-size="large">Seguir a @ParquePereira</a>
+<script>!function(d,s,id){var
+js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
+'script', 'twitter-wjs');</script>
+      </div>
+      <div class="col-xs-8">
+        <h3>Gracias a nuestro aliado estrategico <a href="http://www.parquesoftpereira.com" target="_blank">Parquesoft Pereira</a>, podemos contar con el laboratorio ViveLab para la realización de nuestra primera reunión.</h3>
+      </div>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col-xs-12" style="text-align:center;margin-bottom:0.5em"><h4>Contacto</h4></div>
+    </div>
+    <div class="row" style="text-align:center;">
+      <div class="col-xs-1"></div>
+      <div class="col-xs-4" ><a href="https://twitter.com/pereirajs_" class="twitter-follow-button"
+data-show-count="false" data-lang="es" data-size="large">Seguir a @pereirajs_</a>
+<script>!function(d,s,id){var
+js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
+'script', 'twitter-wjs');</script></div>
+      <div class="col-xs-3" ><h4><a href="mailto:info@pereirajs.org">info@pereirajs.org</a></h4></div>
+      <div class="col-xs-3"><h4><a href="/contacto.html">Otros medios...</a></h4></div>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col-xs-12" style="text-align:center;margin-bottom:0.5em"><h4>Colaboradores</h4></div>
+    </div>
+    <div class="row">
+      <div class="col-xs-4">
+        <a href="https://twitter.com/cronopio2" class="twitter-follow-button"
 data-show-count="false" data-lang="es" data-size="large">Seguir a @cronopio2</a>
 <script>!function(d,s,id){var
 js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
@@ -50,13 +77,13 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
       <div class="col-xs-4"><a href="https://twitter.com/pin3da_" class="twitter-follow-button"
 data-show-count="false" data-lang="es" data-size="large">Seguir a @pin3da_</a>
 <script>!function(d,s,id){var
-js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.cr$
+js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
 'script', 'twitter-wjs');</script>
       </div>
       <div class="col-xs-4"><a href="https://twitter.com/jh0nb3r" class="twitter-follow-button"
 data-show-count="false" data-lang="es" data-size="large">Seguir a @jh0nb3r</a>
 <script>!function(d,s,id){var
-js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.cr$
+js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
 'script', 'twitter-wjs');</script>
       </div>
     </div>
