acomodo el logo mejor

--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
   </div>
 
   <div class="jumbotron" style="background-color:#dff0d8;">
+    <img src="/jsconf.co.jpg" / style="float:right;position:relative;margin-top:4em;">
     <h2>Primera Reunión PereiraJS</h2>
     <p>Fecha: <strong>27 de Febrero del 2014</strong></p>
     <p>Lugar: <strong>ViveLab Pereira</strong></p>
     <h3 class="text-info">Reserva tu lugar ya mismo.</h3>
-    <button>reservar!</button>
+    <button type="button" class="btn btn-primary">Reservar!</button>
   </div>
 
   <div class="container">
