--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <div class="header">
     <ul class="nav nav-pills pull-right">
       <li class="active"><a href="#">Inicio</a></li>
+      <li><a href="/aliados.html">Aliados</a></li>
+      <li><a href="/patrocinadores.html">Patrocinadores</a></li>
       <li><a href="/acercade.html">Acerca de</a></li>
       <li><a href="/contacto.html">Contacto</a></li>
     </ul>
