--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
 'script', 'twitter-wjs');</script>
       </div>
       <div class="col-xs-8">
-        <h3>Gracias a nuestro aliado estrategico <a href="http://www.parquesoftpereira.com" target="_blank">Parquesoft Pereira</a>, podemos contar con el laboratorio ViveLab para la realización de nuestra primera reunión.</h3>
+        <h3>Gracias a nuestro aliado estratégico <a href="http://www.parquesoftpereira.com" target="_blank">Parquesoft Pereira</a>, podemos contar con el laboratorio ViveLab para la realización de nuestra primera reunión.</h3>
       </div>
     </div>
     <hr>
