--- a/index.html
+++ b/index.html
@@ -32,23 +32,24 @@
     <img src="/jsconf.co.jpg" / style="float:right;position:relative;margin-top:4em;">
     <h2>Primera Reunión PereiraJS</h2>
     <p>Fecha: <strong>27 de Febrero del 2014</strong></p>
+    <p>Hora: <strong>6:30 pm.</strong>
     <p>Lugar: <strong>ViveLab Pereira</strong></p>
     <h3 class="text-info">Reserva tu lugar ya mismo.</h3>
-    <button type="button" class="btn btn-primary">Reservar!</button>
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">Reservar!</button>
   </div>
 
   <div class="container">
     <div class="row">
-      <div class="col-xs-4">
-        <img src="/logo-parque.png" alt="Logo Parquesoft Periera" class="img-thumbnail"><br><br>
+      <div class="col-xs-5">
+        <img src="/logo-parque.png" alt="Logo Parquesoft Periera" class="img-rounded"><br><br>
         <a href="https://twitter.com/ParquePereira" class="twitter-follow-button"
 data-show-count="false" data-lang="es" data-size="large">Seguir a @ParquePereira</a>
 <script>!function(d,s,id){var
 js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
 'script', 'twitter-wjs');</script>
       </div>
-      <div class="col-xs-8">
-        <h3>Gracias a nuestro aliado estratégico <a href="http://www.parquesoftpereira.com" target="_blank">Parquesoft Pereira</a>, podemos contar con el laboratorio ViveLab para la realización de nuestra primera reunión.</h3>
+      <div class="col-xs-7">
+        <h3>Gracias a nuestro aliado estratégico <a href="http://www.parquesoftpereira.com" target="_blank">Parquesoft Pereira</a>, podemos contar con el laboratorio <strong>ViveLab</strong> para la realización de nuestra primera reunión.</h3>
       </div>
     </div>
     <hr>
@@ -94,11 +95,29 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
     <div class="row">
       <div class="col-xs-12 bg-info">
         <h2 class="text-center">¿Te gustaría dar una charla en el grupo?</h2>
-        <h3 class="text-center">Con gusto recibimos tu propuesta y la publicaremos en la página.</h3>
-        <p class="lead">Por favor envíanos un correo a <a href="mailto:info@pereirajs.org">info@pereirajs.org</a> con un título y una descripción lo más detallada posible de como sería la charla, qué temas cubriría y qué elementos (Internet, Video Beam, Computador, Sonido, etc) serían necesarios. Te contactaremos lo más pronto posible.</p>
+        <h4 class="text-center">Con gusto recibimos tu propuesta y la publicaremos en la página.</h4>
+        <h5>Por favor envíanos un correo a <a href="mailto:info@pereirajs.org">info@pereirajs.org</a> con un título y una descripción lo más detallada posible de como sería la charla, qué temas cubriría y qué elementos (Internet, Video Beam, Computador, Sonido, etc) serían necesarios. Te contactaremos lo más pronto posible.</h5>
       </div>
     </div>
   </div>
+
+  <!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Reservar Cupo</h4>
+      </div>
+      <div class="modal-body">
+        <iframe src="https://docs.google.com/forms/d/1vX9pZ-wqQWXUjfxJ8B43cSl7YjN2PXMR0vTX7aZm000/viewform?embedded=true" width="558" height="650" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
 
       <div class="footer">
         <p>&copy; PereiraJS 2014</p>
