Correccion de la direccion

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <p>Fecha: <strong>27 de Febrero del 2014</strong></p>
     <p>Hora: <strong>6:30 pm.</strong>
     <p>Lugar: <strong>ViveLab Pereira</strong></p>
-    <p><strong>Carrera 16 Bis # 28b-38 Barrio San Nicolás</strong></p>
+    <p><strong>Carrera 14 Bis # 28 - 38 Barrio San Nicolás</strong></p>
     <h3 class="text-info">Reserva tu lugar ya mismo.</h3>
     <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">Reservar!</button>
   </div>
