Agrego info de la segunda reunion

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
   </div>
 
   <div class="jumbotron" style="background-color:#dff0d8;">
-    <img src="/jsconf.co.jpg" / style="float:right;position:relative;margin-top:4em;">
-    <h2>Primera Reunión PereiraJS</h2>
-    <p>Fecha: <strong>27 de Febrero del 2014</strong></p>
+    <img src="/LogoOficial.png" / style="float:right;position:relative;margin-top:4em;">
+    <h2>Segunda Reunión PereiraJS</h2>
+    <p>Fecha: <strong>22 de Mayo del 2014</strong></p>
     <p>Hora: <strong>6:30 pm.</strong>
     <p>Lugar: <strong>ViveLab Pereira</strong></p>
     <p><strong>Carrera 14 Bis # 28 - 38 Barrio San Nicolás</strong></p>
-    <!-- <h3 class="text-info">Reserva tu lugar ya mismo.</h3>
-    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">Reservar!</button> -->
+    <h3 class="text-info">Reserva tu lugar ya mismo.</h3>
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">Reservar!</button>
   </div>
 
   <div class="container">
@@ -50,7 +50,7 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
 'script', 'twitter-wjs');</script>
       </div>
       <div class="col-xs-7">
-        <h3>Gracias a nuestro aliado estratégico <a href="http://www.parquesoftpereira.com" target="_blank">Parquesoft Pereira</a>, podemos contar con el laboratorio <strong>ViveLab</strong> para la realización de nuestra primera reunión.</h3>
+        <h3>Gracias a nuestro aliado estratégico <a href="http://www.parquesoftpereira.com" target="_blank">Parquesoft Pereira</a>, contamos con el laboratorio <strong>ViveLab</strong>, un espacio ideal para la realización de nuestros eventos.</h3>
       </div>
     </div>
     <hr>
@@ -111,7 +111,7 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
         <h4 class="modal-title" id="myModalLabel">Reservar Cupo</h4>
       </div>
       <div class="modal-body">
-        <iframe src="https://docs.google.com/forms/d/1vX9pZ-wqQWXUjfxJ8B43cSl7YjN2PXMR0vTX7aZm000/viewform?embedded=true" width="558" height="650" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        <iframe src="https://docs.google.com/forms/d/1iu9gkKiNoQKv6kd-zJYOJsfCjQOyuwgKCXXZ_Ygamz8/viewform?embedded=true" width="558" height="650" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
