--- a/evento.html
+++ b/evento.html
@@ -21,31 +21,27 @@
     <ul class="nav nav-pills pull-right">
       <li><a href="index.html">Inicio</a></li>
       <li><a href="aliados.html">Aliados</a></li>
-      <li><a href="evento.html">El evento</a></li>
+      <li class="active"><a href="evento.html">El evento</a></li>
       <li><a href="acercade.html">Acerca de</a></li>
-      <li class="active"><a href="contacto.html">Contacto</a></li>
+      <li><a href="contacto.html">Contacto</a></li>
     </ul>
     <h3 class="text-muted">PereiraJS</h3>
   </div>
-  <h1>Contáctanos</h1>
-  <h2>
-    <address>
-      <strong>PereiraJS</strong><br>
-      <a href="mailto:info@pereirajs.org">info@pereirajs.org</a><br>
-      <a href="http://www.pereirajs.org">www.pereirajs.org</a>
-    </address>
-  </h2>
-  <h3>Medios Sociales de Contacto</h3>
-  <h3>
-    <a href="http://twitter.com/pereirajs_" target="_blank">
-    <img src="images/Twitter_logo_blue.png" alt="Twitter @pereirajs_" class="img-rounded">
-    @pereirajs_</a>
-  </h3>
-  <h3>
-    <a href="http://github.com/pereirajs" target="_blank">
-    <img src="images/Octocat.png" alt="Github pereirajs" class="img-rounded">
-    github.com/pereirajs</a>
-  </h3>
+  <div class="container">
+    <div class="starter-template">
+      <h1>¿Dónde se realiza PereiraJS?</h1>
+      <p class="lead">
+        PereiraJS se realiza  en el vivelab pereira, el cuál se encuentra ubicado en el barrio san nicolás, el siguiente mapa muestra la ubicación:
+        <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3975.7738009618383!2d-75.70280134677887!3d4.808858405046788!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2s!4v1400271146082" width="600" height="450" frameborder="0" style="border:0"></iframe>
+
+      </p>
+      <p class="lead">
+      <h2>Charlas y memorias</h2>
+        En este espacio se subirán las memorias y documentación generada en el pereiraJS
+      </p>
+      <h2>Te esperamos en nuestras reuniones!</h2>
+    </div>
+  </div>
 
   <div class="footer">
     <p>&copy; PereiraJS 2014</p>
