--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
-<link rel="stylesheet" href="/jumbotron.css">
+<link rel="stylesheet" href="jumbotron.css">
 
 <title>PereiraJS</title>
 </head>
@@ -20,16 +20,16 @@
   <div class="header">
     <ul class="nav nav-pills pull-right">
       <li class="active"><a href="#">Inicio</a></li>
-      <li><a href="/aliados.html">Aliados</a></li>
-      <li><a href="/patrocinadores.html">Patrocinadores</a></li>
-      <li><a href="/acercade.html">Acerca de</a></li>
-      <li><a href="/contacto.html">Contacto</a></li>
+      <li><a href="aliados.html">Aliados</a></li>
+      <li><a href="evento.html">El evento</a></li>
+      <li><a href="acercade.html">Acerca de</a></li>
+      <li><a href="contacto.html">Contacto</a></li>
     </ul>
     <h3 class="text-muted">PereiraJS</h3>
   </div>
 
   <div class="jumbotron" style="background-color:#dff0d8;">
-    <img src="/LogoOficial.png" / style="float:right;position:relative;margin-top:4em;">
+    <img src="images/LogoOficial.png" / style="float:right;position:relative;margin-top:4em;">
     <h2>Segunda Reunión PereiraJS</h2>
     <p>Fecha: <strong>22 de Mayo del 2014</strong></p>
     <p>Hora: <strong>6:30 pm.</strong>
@@ -42,7 +42,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-5">
-        <img src="/logo-parque.png" alt="Logo Parquesoft Periera" class="img-rounded"><br><br>
+        <img src="images/logo-parque.png" alt="Logo Parquesoft Periera" class="img-rounded"><br><br>
         <a href="https://twitter.com/ParquePereira" class="twitter-follow-button"
 data-show-count="false" data-lang="es" data-size="large">Seguir a @ParquePereira</a>
 <script>!function(d,s,id){var
