Mira tan cuca este mapa mejor #5
Conflicts:
	index.html

--- a/index.html
+++ b/index.html
@@ -143,6 +143,24 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
   </div>
 </div>
 
+<!-- Mapa -->
+<div class="modal fade" id="mapaModal" tabindex="-1" role="dialog" aria-labelledby="mapaComoLlegar" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Mapa ViveLab Pereira</h4>
+      </div>
+      <div class="modal-body">
+        <iframe src="https://mapsengine.google.com/map/embed?mid=z6qpSw76rva0.k3tG8yn09OOw" width="558" height="600"></iframe>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
       <div class="footer">
         <p>&copy; PereiraJS 2014</p>
       </div>
