--- a/index.html
+++ b/index.html
@@ -69,6 +69,29 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
     </div>
     <hr>
     <div class="row">
+      <div class="col-xs-8" style="margin-bottom:0.5em;margin-left:1em;">
+        <!-- Begin MailChimp Signup Form -->
+        <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+        <style type="text/css">
+          #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+          /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+             We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+        </style>
+        <div id="mc_embed_signup">
+        <form action="http://pereirajs.us3.list-manage.com/subscribe/post?u=e13ea1549764b6a59c175a6cd&amp;id=3113a9f7af" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <label for="mce-EMAIL">Suscribete a nuestra lista de correo</label>
+          <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="tu@correo.com" required>
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;"><input type="text" name="b_e13ea1549764b6a59c175a6cd_3113a9f7af" tabindex="-1" value=""></div>
+            <div class="clear"><input type="submit" value="Suscribir" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+        </form>
+        </div>
+
+        <!--End mc_embed_signup-->
+      </div>
+    </div>
+    <hr>
+    <div class="row">
       <div class="col-xs-12" style="text-align:center;margin-bottom:0.5em"><h4>Colaboradores</h4></div>
     </div>
     <div class="row">
