LOS ENLACES TIENE QUE SER ABSOLUTOS SIEMPRE

--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
-<link rel="stylesheet" href="jumbotron.css">
+<link rel="stylesheet" href="/css/jumbotron.css">
 
 <title>PereiraJS</title>
 </head>
@@ -19,11 +19,11 @@
 <div class="container">
   <div class="header">
     <ul class="nav nav-pills pull-right">
-      <li><a href="index.html">Inicio</a></li>
-      <li><a href="aliados.html">Aliados</a></li>
-      <li><a href="evento.html">El evento</a></li>
-      <li><a href="acercade.html">Acerca de</a></li>
-      <li class="active"><a href="contacto.html">Contacto</a></li>
+      <li><a href="/index.html">Inicio</a></li>
+      <li><a href="/aliados.html">Aliados</a></li>
+      <li><a href="/evento.html">El evento</a></li>
+      <li><a href="/acercade.html">Acerca de</a></li>
+      <li class="active"><a href="/contacto.html">Contacto</a></li>
     </ul>
     <h3 class="text-muted">PereiraJS</h3>
   </div>
@@ -38,12 +38,12 @@
   <h3>Medios Sociales de Contacto</h3>
   <h3>
     <a href="http://twitter.com/pereirajs_" target="_blank">
-    <img src="images/Twitter_logo_blue.png" alt="Twitter @pereirajs_" class="img-rounded">
+    <img src="/images/Twitter_logo_blue.png" alt="Twitter @pereirajs_" class="img-rounded">
     @pereirajs_</a>
   </h3>
   <h3>
     <a href="http://github.com/pereirajs" target="_blank">
-    <img src="images/Octocat.png" alt="Github pereirajs" class="img-rounded">
+    <img src="/images/Octocat.png" alt="Github pereirajs" class="img-rounded">
     github.com/pereirajs</a>
   </h3>
 
