--- a/acercade.html
+++ b/acercade.html
@@ -11,7 +11,7 @@
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
-<link rel="stylesheet" href="jumbotron.css">
+<link rel="stylesheet" href="/css/jumbotron.css">
 
 <title>PereiraJS</title>
 </head>
@@ -19,11 +19,11 @@
 <div class="container">
   <div class="header">
     <ul class="nav nav-pills pull-right">
-      <li><a href="index.html">Inicio</a></li>
-      <li><a href="aliados.html">Aliados</a></li>
-      <li><a href="evento.html">El evento</a></li>
-      <li class="active"><a href="acercade.html">Acerca de</a></li>
-      <li><a href="contacto.html">Contacto</a></li>
+      <li><a href="/index.html">Inicio</a></li>
+      <li><a href="/aliados.html">Aliados</a></li>
+      <li><a href="/evento.html">El evento</a></li>
+      <li class="active"><a href="/acercade.html">Acerca de</a></li>
+      <li><a href="/contacto.html">Contacto</a></li>
     </ul>
     <h3 class="text-muted">PereiraJS</h3>
   </div>
