--- a/aliados.html
+++ b/aliados.html
@@ -11,7 +11,7 @@
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
-<link rel="stylesheet" href="jumbotron.css">
+<link rel="stylesheet" href="/css/jumbotron.css">
 
 <title>PereiraJS</title>
 </head>
@@ -19,11 +19,11 @@
 <div class="container">
   <div class="header">
     <ul class="nav nav-pills pull-right">
-      <li><a href="index.html">Inicio</a></li>
-      <li class="active"><a href="aliados.html">Aliados</a></li>
-      <li><a href="evento.html">El evento</a></li>
-      <li><a href="acercade.html">Acerca de</a></li>
-      <li><a href="contacto.html">Contacto</a></li>
+      <li><a href="/index.html">Inicio</a></li>
+      <li class="active"><a href="/aliados.html">Aliados</a></li>
+      <li><a href="/evento.html">El evento</a></li>
+      <li><a href="/acercade.html">Acerca de</a></li>
+      <li><a href="/contacto.html">Contacto</a></li>
     </ul>
     <h3 class="text-muted">PereiraJS</h3>
   </div>
@@ -31,22 +31,22 @@
   <div class="row">
     <div class="col-xs-6">
       <h3>Parquesoft Pereira</h3>
-      <img src="images/logo-parque.png" alt="Logo Parquesoft Periera" class="img-rounded"><br><br>
+      <img src="/images/logo-parque.png" alt="Logo Parquesoft Periera" class="img-rounded"><br><br>
       <p>Parquesoft Pereira bajo la dirección de Alexander Cadavid, se ha comprometido con la comunidad y nos brindará su apoyo y colaboración con la designación del espacio a utilizar por el grupo en sus reuniones mensuales.</p>
       <p><a role="button" href="http://www.parquesoftpereira.com/" target="_blank" class="btn btn-default">Más información »</a></p>
     </div>
     <div class="col-xs-6">
       <h3>ViveLab</h3>
-      <img src="images/vivelab-logo.jpeg" alt="Logo ViveLab" class="img-rounded">
+      <img src="/images/vivelab-logo.jpeg" alt="Logo ViveLab" class="img-rounded">
       <p>Gracias a Parquesoft Pereira podemos contar con el espacio ViveLab para la realización de reuniones y talleres. Contaremos con computadores para la realización de talleres, los miembros del grupo podrán usarlos durante el evento.</p>
       <p><a role="button" href="https://twitter.com/ViveLabPereira" target="_blank" class="btn btn-default">Más información »</a></p>
     </div>
   </div>
-  <h2>patrocinadores</h2>
+  <h2>Patrocinadores</h2>
    <div class="row">
     <div class="col-xs-6">
       <h3>Rompemuros</h3>
-      <img src="images/rompmurosweb.jpg" alt="Logo Rompemuros" class="img-rounded">
+      <img src="/images/rompmurosweb.jpg" alt="Logo Rompemuros" class="img-rounded">
       <p>El NUEVO Router <a href="http://www.rompemuros.com" target="_blank">Rompemuros 3Bumen 2014</a> mantiene la mayor potencia y alcance entre todos los routers actuales, mezcla la tecnología Propia 3bumen High Power y una maravillosa potencia de 1000 Mw, para lograr un cubrimiento superior. </p>
       <p>La compañía <a href="http://www.3bumen.com/es/inicio.html" targe="_blank">3Bumen</a> detras del router rompemuros, ha decidido patrocinar PereiraJS. 
       <p><strong>Patrocina: </strong>Comida y bebidas.</p>
@@ -54,7 +54,7 @@
     </div>
     <div class="col-xs-6">
       <h3>Nodejitsu</h3>
-      <img src="images/logo-nodejitsu.png" alt="Logo Nodejitsu" class="img-rounded">
+      <img src="/images/logo-nodejitsu.png" alt="Logo Nodejitsu" class="img-rounded">
       <p>Especial agradecimiento a <a href="https://www.nodejitsu.com/" target="_blank">Nodejitsu</a> por alojar por ningun costo nuestro sitio web.</p>
       <p>Nodejitsu es una Plataforma como Servicio (PaaS) que ofrece el alojamiento de aplicaciones hechas usando la emergente tecnología <a href="http://www.nodejs.org/" target="_blank">Node.js</a></p>
       <p><strong>Patrocina: </strong>Hosting página web.</p>
