Agrego mas info a la pagina de evento

--- a/evento.html
+++ b/evento.html
@@ -31,13 +31,17 @@
     <div class="starter-template">
       <h1>¿Dónde se realiza PereiraJS?</h1>
       <p class="lead">
-        PereiraJS se realiza  en el vivelab pereira, el cuál se encuentra ubicado en el barrio san nicolás, el siguiente mapa muestra la ubicación:
+        PereiraJS se realiza  en el ViveLab pereira, el cuál se encuentra ubicado en el barrio san nicolás, el siguiente mapa muestra la ubicación:
         <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3975.7738009618383!2d-75.70280134677887!3d4.808858405046788!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2s!4v1400271146082" width="600" height="450" frameborder="0" style="border:0"></iframe>
 
       </p>
+      <h2>¿Como son las reuniones?</h2>
+      <p>
+        La entrada a las reuniones será gratuita con reservacion previa, la agenda contara con máximo 2 conferencias, despues de las conferencias acostumbramos charlar entre todos y compartir algún snack y bebida.
+      </p>
       <p class="lead">
       <h2>Charlas y memorias</h2>
-        En este espacio se subirán las memorias y documentación generada en el pereiraJS
+        En este espacio se subirán las memorias y documentación generada en el PereiraJS
       </p>
       <h2>Te esperamos en nuestras reuniones!</h2>
     </div>
