termino el mapa

--- a/evento.html
+++ b/evento.html
@@ -32,7 +32,7 @@
       <h1>¿Dónde se realiza PereiraJS?</h1>
       <p class="lead">
         PereiraJS se realiza  en el ViveLab pereira, el cuál se encuentra ubicado en el barrio san nicolás, el siguiente mapa muestra la ubicación:
-        <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3975.7738009618383!2d-75.70280134677887!3d4.808858405046788!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2s!4v1400271146082" width="600" height="450" frameborder="0" style="border:0"></iframe>
+        <iframe src="https://mapsengine.google.com/map/embed?mid=z6qpSw76rva0.k3tG8yn09OOw" width="558" height="600"></iframe>
 
       </p>
       <h2>¿Como son las reuniones?</h2>
