--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <p>Lugar: <strong>ViveLab Pereira</strong></p>
     <p><strong>Carrera 14 Bis # 28 - 38 Barrio San Nicolás</strong></p>
     <h3 class="text-info">Reserva tu lugar ya mismo.</h3>
-    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">Reservar!</button>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Reservar!</button>
+    <button type="button" class="btn btn-success" data-toggle="modal" data-target="#mapaModal">Ver Mapa</button>
   </div>
 
   <div class="container">
