Hice los siguientes cambios menores  * Anuncio tercera reunion  * Agrego botones twitter para oscar y santiago  * Quito el ribbon de fork on github en moviles

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
   <div class="jumbotron" style="background-color:#dff0d8;">
     <img src="/images/LogoOficial.png" / style="float:right;position:relative;margin-top:4em;">
-    <h2>Segunda Reunión PereiraJS</h2>
-    <p>Fecha: <strong>22 de Mayo del 2014</strong></p>
+    <h2>Tercera Reunión PereiraJS</h2>
+    <p>Fecha: <strong>25 de Junio del 2014</strong></p>
     <p>Hora: <strong>6:30 pm.</strong>
     <p>Lugar: <strong>ViveLab Pereira</strong></p>
     <p><strong>Carrera 14 Bis # 28 - 38 Barrio San Nicolás</strong></p>
@@ -116,6 +116,20 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
 'script', 'twitter-wjs');</script>
       </div>
     </div>
+    <div class="row">
+      <div class="col-xs-4"><a href="https://twitter.com/oagranada" class="twitter-follow-button"
+data-show-count="false" data-lang="es" data-size="large">Seguir a @oagranada</a>
+<script>!function(d,s,id){var
+js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
+'script', 'twitter-wjs');</script>
+      </div>
+      <div class="col-xs-4"><a href="https://twitter.com/santiaguf" class="twitter-follow-button"
+data-show-count="false" data-lang="es" data-size="large">Seguir a @santiaguf</a>
+<script>!function(d,s,id){var
+js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
+'script', 'twitter-wjs');</script>
+      </div>
+    </div>
     <hr>
     <div class="row">
       <div class="col-xs-12 bg-info">
@@ -135,7 +149,7 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
         <h4 class="modal-title" id="myModalLabel">Reservar Cupo</h4>
       </div>
       <div class="modal-body">
-        <iframe src="https://docs.google.com/forms/d/1iu9gkKiNoQKv6kd-zJYOJsfCjQOyuwgKCXXZ_Ygamz8/viewform?embedded=true" width="558" height="650" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        <iframe src="https://docs.google.com/forms/d/1MtLt1_LNH1WbeqftR9-K4Gx3B-1pno2v4-7hFTij6vI/viewform?embedded=true" width="558" height="650" frameborder="0" marginheight="0" marginwidth="0">Cargando...</iframe>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -174,7 +188,7 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
     <!-- Latest compiled and minified JavaScript -->
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 
-<a href="https://github.com/pereirajs/pagina"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Editame en GitHub"></a>
+<div id="github-ribbon"><a href="https://github.com/pereirajs/pagina"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Editame en GitHub"></a></div>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
