--- a/aliados.html
+++ b/aliados.html
@@ -27,7 +27,7 @@
     </ul>
     <h3 class="text-muted">PereiraJS</h3>
   </div>
-  <h2>Aliados Estratégicos</h2>
+  <h2 class="text-info">Aliados Estratégicos</h2>
   <div class="row">
     <div class="col-xs-6">
       <h3>Parquesoft Pereira</h3>
@@ -42,7 +42,8 @@
       <p><a role="button" href="https://twitter.com/ViveLabPereira" target="_blank" class="btn btn-default">Más información »</a></p>
     </div>
   </div>
-  <h2>Patrocinadores</h2>
+  <hr>
+  <h2 class="text-info">Patrocinadores</h2>
    <div class="row">
     <div class="col-xs-6">
       <h3>Rompemuros</h3>
@@ -74,7 +75,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 
-<a href="https://github.com/pereirajs/pagina"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Editame en GitHub"></a>
+<div id="github-ribbon"><a href="https://github.com/pereirajs/pagina"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Editame en GitHub"></a></div>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
