Agrego el logo al titulo de la pagina

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       <li><a href="/acercade.html">Acerca de</a></li>
       <li><a href="/contacto.html">Contacto</a></li>
     </ul>
-    <h3 class="text-muted">PereiraJS</h3>
+    <a href="http://pereirajs.org"><img src="/images/LogoPeq.png" class="img-rounded" style="position:relative;float:left;"><h3 class="text-muted" style="padding-left: 3em; padding-top: 0.8em;">PereiraJS</h3></a>
   </div>
 
   <div class="jumbotron" style="background-color:#dff0d8;">
-    <img src="/images/LogoOficial.png" / style="float:right;position:relative;margin-top:4em;">
+    <img src="/images/LogoOficial.png" style="float:right;position:relative;margin-top:4em;" />
     <h2>Tercera Reunión PereiraJS</h2>
     <p>Fecha: <strong>25 de Junio del 2014</strong></p>
     <p>Hora: <strong>6:30 pm.</strong>
