--- a/acercade.html
+++ b/acercade.html
@@ -25,7 +25,7 @@
       <li class="active"><a href="/acercade.html">Acerca de</a></li>
       <li><a href="/contacto.html">Contacto</a></li>
     </ul>
-    <h3 class="text-muted">PereiraJS</h3>
+    <a href="http://pereirajs.org"><img src="/images/LogoPeq.png" class="img-rounded" style="position:relative;float:left;"><h3 class="text-muted" style="padding-left: 3em; padding-top: 0.8em;">PereiraJS</h3></a>
   </div>
   <div class="container">
     <div class="starter-template">
