--- a/aliados.html
+++ b/aliados.html
@@ -25,7 +25,7 @@
       <li><a href="/acercade.html">Acerca de</a></li>
       <li><a href="/contacto.html">Contacto</a></li>
     </ul>
-    <h3 class="text-muted">PereiraJS</h3>
+    <a href="http://pereirajs.org"><img src="/images/LogoPeq.png" class="img-rounded" style="position:relative;float:left;"><h3 class="text-muted" style="padding-left: 3em; padding-top: 0.8em;">PereiraJS</h3></a>
   </div>
   <h2 class="text-info">Aliados Estratégicos</h2>
   <div class="row">
