Agrego a @buritica como patrocinador

--- a/aliados.html
+++ b/aliados.html
@@ -62,6 +62,16 @@
       <p><a role="button" href="https://www.nodejitsu.com/" target="_blank" class="btn btn-default">Más información »</a></p>
     </div>
   </div>
+  <div class="row">
+    <div class="col-xs-6">
+      <h3>Juan Pablo Buritica</h3>
+      <img src="/images/buritica.jpg" alt="Foto Juan Pablo Buritica" class="img-rounded" />
+      <p>VP of Engineering en <a href="https://twitter.com/ride" target="_blank">@ride</a>, organizador de <a href="https://twitter.com/jsconfco" target="_blank">@jsconfco</a>, <a href="https://twitter.com/bogotajs" target="_blank">@bogotaJS</a>, <a href="https://twitter.com/code_rise" target="_blank">@code_rise</a>. Esforzandose en mejorar el ambiente LatAm/Latino tecnológico. Chef y Quimico en una vida pasada.</p>
+      <p>Gracias al apoyo de Juan Pablo Buritica contamos con comida, bebidas y cerveza para nuestra tercera reunión.</p>
+      <p><strong>Patrocina: </strong>Comida, bebidas Y CERVEZA!.</p>
+      <p><a role="button" href="https://twitter.com/buritica" target="_blank" class="btn btn-default">Más información »</a></p>
+    </div>
+  </div>
 
   <div class="footer">
     <p>&copy; PereiraJS 2014</p>
