Agrego enlaces a las charlas anteriores en la pagina de evento

--- a/evento.html
+++ b/evento.html
@@ -32,17 +32,23 @@
       <h1>¿Dónde se realiza PereiraJS?</h1>
       <p class="lead">
         PereiraJS se realiza  en el ViveLab pereira, el cuál se encuentra ubicado en el barrio san nicolás, el siguiente mapa muestra la ubicación:
-        <iframe src="https://mapsengine.google.com/map/embed?mid=z6qpSw76rva0.k3tG8yn09OOw" width="558" height="600"></iframe>
+        <iframe src="https://mapsengine.google.com/map/embed?mid=z6qpSw76rva0.k3tG8yn09OOw" width="458" height="500"></iframe>
 
       </p>
       <h2>¿Como son las reuniones?</h2>
       <p>
         La entrada a las reuniones será gratuita con reservacion previa, la agenda contara con máximo 2 conferencias, despues de las conferencias acostumbramos charlar entre todos y compartir algún snack y bebida.
       </p>
-      <p class="lead">
-      <h2>Charlas y memorias</h2>
-        En este espacio se subirán las memorias y documentación generada en el PereiraJS
-      </p>
+      <h2 style="font-size:3em;">Charlas y memorias</h2>
+         <p class="lead" style="font-size:2em;">
+          Durante las reuniones anteriores hemos contado con las siguientes presentaciones.
+          <ul style="font-size:1.7em;">
+           <li><a href="http://jhonber.github.io/slides" target="_blank">JavaScript Historia y Aplicaciones</a> por <a href="https://twitter.com/jh0nb3r" target="_blank">(@jhonber </a> y <a href="https://twitter.com/pin3da_">@pin3da)</a> <a href="http://jhonber.github.io/slides" target="_blank">Ver Slides</a></li>
+           <li><a href="http://jhonber.github.io/slides2" target="_blank">Introducción a JavaScript Client-Side</a> por <a href="https://twitter.com/jh0nb3r" target="_blank">(@jhonber) </a> <a href="http://jhonber.github.io/slides2" target="_blank"> Ver Slides</a></li>
+           <li><a href="https://www.dropbox.com/s/vzz4bl9fdqg1zzt/Javascript%20O.O..pdf" target="_blank">Programación Orientada a Objetos en JavaScript</a> por <a href="https://twitter.com/oagranada" target="_blank">(@oagranada) </a> <a href="https://www.dropbox.com/s/vzz4bl9fdqg1zzt/Javascript%20O.O..pdf" target="_blank"> Ver Slides en PDF</a></li>
+           <li><a href="http://fcbosque.nodejitsu.com/nodejs" target="_blank">Introducción a JavaScript Server-Side</a> por <a href="https://twitter.com/cronopio2" target="_blank">(@cronopio) </a> <a href="http://fcbosque.nodejitsu.com/nodejs" target="_blank"> Ver Slides </a></li>
+          </ul>
+        </p>
       <h2>Te esperamos en nuestras reuniones!</h2>
     </div>
   </div>
