--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <div class="jumbotron" style="background-color:#dff0d8;">
     <img src="/images/LogoOficial.png" style="float:right;position:relative;margin-top:4em;" />
-    <h2>Tercera Reunión PereiraJS</h2>
+    <h2>Cuarta Reunión PereiraJS</h2>
     <p>Fecha: <strong>23 de Julio del 2014</strong></p>
     <p>Hora: <strong>6:30 pm.</strong>
     <p>Lugar: <strong>ViveLab Pereira</strong></p>
