Agrego el grupo Sirius como patrocinador

--- a/aliados.html
+++ b/aliados.html
@@ -58,6 +58,7 @@
       <img src="/images/logo-nodejitsu.png" alt="Logo Nodejitsu" class="img-rounded">
       <p>Especial agradecimiento a <a href="https://www.nodejitsu.com/" target="_blank">Nodejitsu</a> por alojar por ningun costo nuestro sitio web.</p>
       <p>Nodejitsu es una Plataforma como Servicio (PaaS) que ofrece el alojamiento de aplicaciones hechas usando la emergente tecnología <a href="http://www.nodejs.org/" target="_blank">Node.js</a></p>
+      <p>Dentro de su compromiso con el Software Libre y Open Source, Nodejitsu apoya diferentes eventos internacionales, tambien apoyan los grupos locales de JavaScript. En este caso su compromiso se ratifica al apoyar PereiraJS.
       <p><strong>Patrocina: </strong>Hosting página web.</p>
       <p><a role="button" href="https://www.nodejitsu.com/" target="_blank" class="btn btn-default">Más información »</a></p>
     </div>
@@ -66,10 +67,19 @@
     <div class="col-xs-6">
       <h3>Juan Pablo Buritica</h3>
       <img src="/images/buritica.jpg" alt="Foto Juan Pablo Buritica" class="img-rounded" />
+      <br><br><br>
       <p>VP of Engineering en <a href="https://twitter.com/ride" target="_blank">@ride</a>, organizador de <a href="https://twitter.com/jsconfco" target="_blank">@jsconfco</a>, <a href="https://twitter.com/bogotajs" target="_blank">@bogotaJS</a>, <a href="https://twitter.com/code_rise" target="_blank">@code_rise</a>. Esforzandose en mejorar el ambiente LatAm/Latino tecnológico. Chef y Quimico en una vida pasada.</p>
       <p>Gracias al apoyo de Juan Pablo Buritica contamos con comida, bebidas y cerveza para nuestra tercera reunión.</p>
       <p><strong>Patrocina: </strong>Comida, bebidas Y CERVEZA!.</p>
       <p><a role="button" href="https://twitter.com/buritica" target="_blank" class="btn btn-default">Más información »</a></p>
+    </div>
+    <div class="col-xs-6">
+      <h3>Grupo de Investigación Sirius</h3>
+      <img src="/images/sirius.png" alt="" class="img-rounded" />
+      <p>El <a href="http://sirius.utp.edu.co/" target="_blank">Grupo de Investigación Sirius</a> surgió con el objetivo de fomentar los desarrollos en las áreas de la electrónica digital, lógica programable y arquitectura de computadores en el programa de <a href="http://isc.utp.edu.co/" target="_blank">Ingeniería de Sistemas y Computación</a> de la <a href="http://www.utp.edu.co/" target="_blank">Universidad Tecnológica de Pereira.</a></p>
+      <p>Actualmente el Grupo de Investigación Sirius cuenta con dos laboratorios: <a href="http://sirius.utp.edu.co/sirius/?q=node/10" target="_blank">Sirius HPC</a> y <a href="http://sirius.utp.edu.co/sirius/?q=node/11" target="_blank">Sirius ITS.</a> En estos dos laboratorios Sirius cuenta con un grupo interdisciplinario de profesionales que han desarrollado exitosamente múltiples proyectos con diversos clientes en diferentes áreas, los cuales le han asegurado un buen nombre dentro de la comunidad académica y profesional en la región cafetera de Colombia.</p>
+      <p><strong>Patrocina: </strong>Comida y bebidas.</p>
+      <p><a role="button" href="http://sirius.utp.edu.co/" target="_blank" class="btn btn-default">Más información »</a></p>
     </div>
   </div>
 
