Agrego un link en el index para el canal en gitter.im

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <p>Hora: <strong>6:30 pm.</strong>
     <p>Lugar: <strong>ViveLab Pereira</strong></p>
     <p><strong>Carrera 14 Bis # 28 - 38 Barrio San Nicolás</strong></p>
-    <h3 class="text-info">Reserva tu lugar ya mismo.</h3>
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Reservar!</button>
+    <!-- <h3 class="text-info">Reserva tu lugar ya mismo.</h3>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Reservar!</button> -->
     <button type="button" class="btn btn-success" data-toggle="modal" data-target="#mapaModal">Ver Mapa</button>
   </div>
 
@@ -70,7 +70,7 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
     </div>
     <hr>
     <div class="row">
-      <div class="col-xs-8" style="margin-bottom:0.5em;margin-left:10em;">
+      <div class="col-xs-6" style="margin-bottom:0.5em;">
         <!-- Begin MailChimp Signup Form -->
         <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
         <style type="text/css">
@@ -89,6 +89,10 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
         </div>
 
         <!--End mc_embed_signup-->
+      </div>
+      <div class="col-xs-4" style="margin-top:0.3em;">
+        <h4>Ahora tenemos Chat!</h4>
+        <a href="https://gitter.im/pereirajs/pagina?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge"><img src="https://badges.gitter.im/Join Chat.svg"></a>
       </div>
     </div>
     <hr>
