Hago el anuncio de la septima reunion

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 
   <div class="jumbotron" style="background-color:#dff0d8;">
     <img src="/images/LogoOficial.png" style="float:right;position:relative;margin-top:4em;" />
-    <h2>Sexta Reunión PereiraJS</h2>
-    <p>Fecha: <strong>Miercoles, 29 de Octubre del 2014</strong></p>
+    <h2>Septima Reunión PereiraJS</h2>
+    <p>Fecha: <strong>Miercoles, 26 de Noviembre del 2014</strong></p>
     <p>Hora: <strong>6:30 pm.</strong>
     <p>Lugar: <strong>ViveLab Pereira</strong></p>
     <p><strong>Carrera 14 Bis # 28 - 38 Barrio San Nicolás</strong></p>
-    <!-- <h3 class="text-info">Reserva tu lugar ya mismo.</h3>
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Reservar!</button> -->
+    <h3 class="text-info">Reserva tu lugar ya mismo.</h3>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Reservar!</button> 
     <button type="button" class="btn btn-success" data-toggle="modal" data-target="#mapaModal">Ver Mapa</button>
   </div>
 
@@ -153,7 +153,7 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
         <h4 class="modal-title" id="myModalLabel">Reservar Cupo</h4>
       </div>
       <div class="modal-body">
-        <iframe src="https://docs.google.com/forms/d/1pUvk1-X_m4lAY-B7Pycfg8P-SBh84BJzXQ6wnP-Wnro/viewform?embedded=true" width="558" height="650" frameborder="0" marginheight="0" marginwidth="0">Cargando...</iframe>
+        <iframe src="https://docs.google.com/forms/d/1f3cL0W01JhZtW88nY0yqp1uRVWrjna4il0zfIp4HjJY/viewform?embedded=true" width="558" height="650" frameborder="0" marginheight="0" marginwidth="0">Cargando...</iframe>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
