--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/agency.css" rel="stylesheet">
+    <link href="/css/agency.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -47,7 +47,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">PER.JS</a>
+                <a class="navbar-brand page-scroll" href="#page-top">
+                    <img class="img-square" src="/images/LogoPeq.png" height="40px" /> PEREIRA.JS
+                </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -81,8 +83,10 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <div class="intro-text">
-                <div class="intro-lead-in">PEREIRA.JS</div>
+            <div class="intro-text" style="padding-top:160px;">
+                <div class="intro-lead-in">
+                    <img class="img-rounded" src="/images/LogoOficial.png" /><br>PEREIRA.JS
+                </div>
                 <div class="intro-heading">Comunidad de aprendizaje del lenguaje Javascript</div>
             </div>
         </div>
