Muevo las imagenes de patrocinadores a su propia carpeta

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <a class="page-scroll" href="#portfolio">Evento</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Patrocinadores</a>
+                        <a class="page-scroll" href="#patrocinadores">Patrocinadores</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">Colaboradores</a>
@@ -194,8 +194,8 @@
         </div>
     </section>
 
-    <!-- About Section -->
-    <section id="about">
+    <!-- Patrocinadores Section -->
+    <section id="patrocinadores">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
