Muestro los logos de los patrocinadores

--- a/templates.html
+++ b/templates.html
@@ -34,7 +34,7 @@
                         {{#patrocinadores}}
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <img class="img-circle img-responsive" src="{{logo}}" alt="Logo {{nombre}}">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
