--- a/templates.html
+++ b/templates.html
@@ -25,7 +25,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Patrocinadores</h2>
-                    <h3 class="section-subheading text-muted">{{descripcion}}</h3>
+                    <h3 class="section-subheading text-muted">Todas las actividades realizadas son posibles gracias a:</h3>
                 </div>
             </div>
             <div class="row">
